--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/muazazhar/viteTest",
+  "homepage": "https://github.com/muazazhar/viteTest2",
   "name": "testvite",
   "private": true,
   "version": "0.0.0",
